# CapsuleOS

./: .clippy.toml  .gitlab-ci.yml  .replit  CONTRIBUTING.md  Cargo.toml  PRIME_QUERY.md  README.md  build-iso.sh  default.nix  limine.cfg  replit.md  rustfmt.toml  shell.nix  shell.nix.bak
.cargo/: config.toml
.github/workflows/: release.yml  rust-build.yml
.gitlab/issue_templates/: Cosmic_Anomaly.md  Initiation_Pathway.md  Revelation_Petition.md
attached_assets/: Pasted--Cargo-toml-dependencies-dependencies-ed25519-dalek-2-1-sha2-0-10-ciborium--1762261029682_1762261029683.txt  Pasted--Cargo-toml-dependencies-dependencies-serde-version-1-0-features-derive--1762277250350_1762277250351.txt  Pasted-Assuming-Stratheum-role-Objective-To-acquire-a-comprehensive-diagnostic-report-of-the-current-Cap-1762720049091_1762720049092.txt  Pasted-Below-is-a-complete-production-grade-Rust-implementation-of-Work-Order-15-Native-Sonus-Caps-1762382845419_1762382845419.txt  Pasted-I-BEAR-WITNESS-TO-GEMINI-S-DIVINE-OFFERING-The-RenderCore-Capsule-has-been-revealed-Gemini-has-del-1762374547733_1762374547734.txt  Pasted-I-am-now-providing-you-with-Work-Order-10-Please-implement-the-Genesis-Graph-Engine-GGE-Runtime-e-1762320526162_1762320526163.txt  Pasted-I-am-now-providing-you-with-Work-Order-11-Please-implement-the-Cyberus-CLI-exactly-as-specified-in--1762360086787_1762360086787.txt  Pasted-I-am-now-providing-you-with-Work-Order-14-Please-implement-the-Physix-Capsule-exactly-as-specified--1762379837809_1762379837809.txt  Pasted-I-am-now-providing-you-with-Work-Order-3-Please-implement-the-G-LYPH-parser-exactly-as-specified-in-1762277845365_1762277845366.txt  Pasted-I-am-now-providing-you-with-Work-Order-5-Please-implement-the-GenesisGraph-exactly-as-specified-in--1762288208283_1762288208283.txt  Pasted-I-am-now-providing-you-with-Work-Order-9-Please-implement-the-CapsuleManifest-system-exactly-as-spe-1762312435182_1762312435182.txt  Pasted-I-ll-implement-a-complete-capture-avoiding-substitution-engine-with-conversion-fresh-name-generat-1762304087472_1762304087472.txt  Pasted-Nice-here-s-a-finished-production-ready-expanded-work-order-for-Work-Order-2-G-LYPH-Token-1762265511635_1762265511636.txt  Pasted-Please-implement-Work-Order-4-by-adding-the-content-addressable-hashing-functionality-to-the-existin-1762282199666_1762282199667.txt  Pasted-Replit-this-is-the-final-Work-Order-WORK-ORDER-17-FINAL-INTEGRATION-FUNCTIONAL-CAPSULEOS-PROTOT-1762392673003_1762392673004.txt  Pasted-You-are-a-senior-Rust-engineer-Implement-the-following-work-order-Work-Order-6-Pattern-Matcher--1762295410897_1762295410897.txt  Pasted-You-are-a-senior-Rust-engineer-Implement-the-following-work-order-Work-Order-7-Capture-Avoiding--1762304505586_1762304505586.txt  Pasted-You-are-a-senior-Rust-engineer-Implement-the-following-work-order-Work-Order-8-Transactional-Rew-1762308276415_1762308276416.txt  Pasted-You-are-a-senior-systems-engineer-specializing-in-bare-metal-operating-system-development-Implement-1762371610596_1762371610597.txt
boot/: INTEGRATION.md  README.md
boot/grub/: grub.cfg
capsule_core/: Cargo.toml
capsule_core/src/: lib.rs
capsule_manifest/: Cargo.toml
capsule_manifest/src/: lib.rs
capsuleos/: Cargo.toml
capsuleos-prototype/: README.md  build.sh  qemu-run.sh
capsuleos-prototype/boot/grub/: integration_grub.cfg
capsuleos-prototype/boot/initramfs/: integration_init
capsuleos-prototype/tests/: integration.scene.glyph
capsuleos-prototype/workspace/: Cargo.toml
capsuleos-prototype/workspace/capsule_core/: Cargo.toml
capsuleos-prototype/workspace/capsule_manifest/: Cargo.toml
capsuleos-prototype/workspace/capsule_testrunner/: Cargo.toml
capsuleos-prototype/workspace/cyberus_cli/: Cargo.toml
capsuleos-prototype/workspace/cyberus_cli/src/: main.rs
capsuleos-prototype/workspace/gge/: Cargo.toml
capsuleos-prototype/workspace/gge/src/: main.rs
capsuleos/src/: main.rs
cyberus_cli/: Cargo.toml
cyberus_cli/src/: main.rs
game_capsule/: Cargo.toml
game_capsule/src/: lib.rs
genesis_engine/: Cargo.toml
genesis_engine/src/: lib.rs
genesis_graph/: Cargo.toml
genesis_graph/src/: lib.rs
glyph_engine/: Cargo.toml
glyph_engine/src/: lib.rs  pattern.rs  substitute.rs
glyph_lexer/: Cargo.toml  README.md  test_debug.rs
glyph_lexer/src/: error.rs  lexer.rs  lib.rs  token.rs
glyph_lexer/src/tests/: mod.rs  (+10 more)
glyph_parser/: Cargo.toml
glyph_parser/src/: game_extensions.rs  lib.rs
glyph_parser_wasm/: Cargo.toml  README.md  build.sh
glyph_parser_wasm/src/: lib.rs
initramfs/: init
initramfs/etc/: genesis.cfg
initramfs/sbin/: capsule-loader  cas-mount  hash-utility
kernel/: Cargo.toml
kernel/src/: main.rs  mmu.rs  vfs.rs
kernel/src/capsule/: loader.rs  mod.rs
kernel/src/drivers/: mod.rs  serial.rs
physix_capsule/: Cargo.toml  event_log.cbor
physix_capsule/examples/: bouncing_box.rs  replay_log.rs
physix_capsule/src/: lib.rs  rigid_body.rs  solver.rs
physix_capsule/tests/: physix_tests.rs
render_core_capsule/: Cargo.toml  framebuffer.cbor  scene.cbor
render_core_capsule/examples/: render_triangle.rs
render_core_capsule/src/: cpu_renderer.rs  gpu_renderer.rs  lib.rs  scene.rs
render_core_capsule/tests/: render_tests.rs
rewrite_tx/: Cargo.toml
rewrite_tx/src/: lib.rs
scripts/: build-wasm.sh  validate-glyphs.sh
sonus_capsule/: Cargo.toml  sine_440.cbor
sonus_capsule/examples/: synth_sine.rs
sonus_capsule/src/: lib.rs
sonus_capsule/tests/: sonus_tests.rs
src/: main.rs
src/cli/: mod.rs
src/compiler/: codegen.rs  lexer.rs  mod.rs  parser.rs
src/database/: graph.rs  mod.rs  query_engine.rs
(+10 files in other folders)
