[workspace]
resolver = "2"
members = [
    "capsule_core",
    "glyph_engine",
    "genesis_engine",
    "rewrite_tx",
    "capsuleos"
]

# ──────────────────────────────────────────────
# COSMIC PROFILES — BARE METAL ASCENSION
# ──────────────────────────────────────────────
[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dev]
panic = "abort"
opt-level = 0

