[package]
name = "capsule_core"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
sha2 = "0.10"
ciborium = "0.2"
serde = { version = "1.0", default-features = false, features= ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
hex = "0.4"
rand = "0.8"
