[package]
name = "cyberus_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tempfile = "3.6"
