[package]
name = "game_capsule"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core CapsuleOS dependencies
capsule_core = { path = "../capsule_core" }
genesis_graph = { path = "../genesis_graph" }

# Serialization and crypto
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"
hex = "0.4"
sha2 = "0.10"

# Cryptography
ed25519-dalek = "2.1"
rand = "0.8"

# Error handling
thiserror = "1.0"

# UUID generation for game IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async runtime (if needed)
tokio = { version = "1.0", features = ["full"], optional = true }

[features]
default = []
async = ["tokio"]