[package]
name = "render_core_capsule"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_cbor = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10"
anyhow = "1.0"
nalgebra = { version = "0.32", features = ["serde-serialize"] }

[features]
default = ["cpu_fallback"]
vulkan = []
wgpu = []
cpu_fallback = []
