[package]
name = "cyberus_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cyberus_cli"
path = "src/main.rs"

[dependencies]
capsule_manifest = { path = "../capsule_manifest" }
sonus_capsule = { path = "../sonus_capsule" }
clap = { version = "4.2", features = ["derive"] }
anyhow = "1.0"
ed25519-dalek = "2.0"
ciborium = "0.2"
