[package]
name = "gge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gge"
path = "src/main.rs"

[dependencies]
capsule_manifest = { path = "../capsule_manifest" }
capsule_core = { path = "../capsule_core" }
sonus_capsule = { path = "../sonus_capsule" }
render_core = { path = "../render_core" }
physix_capsule = { path = "../physix_capsule" }
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
clap = { version = "4.2", features = ["derive"] }
anyhow = "1.0"
